--- a/css/styles.css
+++ b/css/styles.css
@@ -134,16 +134,10 @@ nav h1 a {
 #restaurants-list {
   background-color: #f3f3f3;
   list-style: outside none none;
-  margin: 0;
-  padding: 30px 15px 60px;
+  margin: 50px;
+  padding: 30px 15px 30px;
   text-align: center;
   border: 1px solid silver;
-  -ms-box-orient: horizontal;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -moz-flex;
-  display: -webkit-flex;
   display: flex;
 }
 
@@ -156,7 +150,6 @@ nav h1 a {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
- 
   margin: 15px;
   min-height: 380px;
   max-width: 480px;
@@ -169,7 +162,6 @@ nav h1 a {
   display: block;
   margin: 0;
   max-width: 100%;
-  min-height: 248px;
   min-width: 100%;
 }
 #restaurants-list li h1 {
@@ -200,6 +192,20 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
+.inside .row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+}
+
+.inside .column {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 100%;
+  flex: 1;
+}
+
 .inside header {
   position: fixed;
   top: 0;
@@ -208,7 +214,7 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 92%;
   position: fixed;
   right: 0;
   top: 80px;
@@ -221,53 +227,69 @@ nav h1 a {
 }
 .inside #footer {
   bottom: 0;
-  position: absolute;
-  width: 50%;
+  position: fixed;
+  width: 100%;
+}
+table {
+  width: 100%;
+  border: 1px solid #ccc;
+  border-collapse: collapse;
+}
+table td {
+  color: #666;
+  border: 1px solid #ccc;
+  padding: 0.5em 1em;
+}
+table tr:nth-child(2n+1) {
+  background-color: white;
 }
 #restaurant-name {
   color: #f18200;
   font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-size: 22px;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 15px 0;
   text-transform: uppercase;
   line-height: 1.1;
 }
 #restaurant-img {
-	width: 90%;
+  display: block;
+	max-width: 100%;
+  width: 800px;
+  margin: 0 auto;
 }
 #restaurant-address {
-  font-size: 12pt;
+  font-size: 18px;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
+  font-size: 18px;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 140px 40px 30px;
-  width: 50%;
+  padding: 140px 1% 30px 1%;
+  width: 48%;
 }
-#reviews-container {
-  padding: 30px 40px 80px;
-}
-#reviews-container h2 {
+#restaurant-container h2, #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
+  font-size: 26px;
   font-weight: 300;
   letter-spacing: -1px;
-  padding-bottom: 1pt;
+  padding-bottom: 2px;
+}
+#reviews-container {
+  padding: 30px 1% 96px 1%;
 }
 #reviews-list {
   margin: 0;
@@ -275,14 +297,44 @@ nav h1 a {
 }
 #reviews-list li {
   background-color: #fff;
-    border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
-  width: 85%;
+  width: 96%;
+  margin: 0 0 2% 0;
+  padding: 2%;
+}
+#reviews-list li header {
+  position: static;
+  float: left;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #ccc;
+}
+#reviews-list li .name {
+  font-size: 1.6em;
+  float: left;
+  width: 60%;
+  line-height: 2em;
+  margin: 0;
+}
+#reviews-list li .date {
+  font-size: 1em;
+  float: right;
+  width: 40%;
+  text-align: right;
+  line-height: 3.2em;
+  margin: 0;
+}
+#reviews-list li .rating {
+  clear: both;
+  display: inline-block;
+  padding: 2px 5px;
+  background-color: orange;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: bold;
 }
 #reviews-list li p {
   margin: 0 0 10px;
